--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@ wheels/
 
 # Virtual Environment
 venv/
-env/
 ENV/
+env/
+.env
 
 # IDE
 .idea/
@@ -31,6 +32,15 @@ ENV/
 *.swp
 *.swo
 
+# Debug files
+debug/
+*.log
+
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db 
