--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-requests>=2.31.0
-beautifulsoup4>=4.12.0
-customtkinter>=5.2.0
-urllib3>=2.0.7 
+beautifulsoup4==4.12.3
+requests==2.31.0
+selenium==4.29.0
+jinja2==3.1.6
+webdriver-manager==4.0.2
+urllib3==2.3.0 
